# voxelcraft

./: .gitignore  README.md
VoxelScript/: create_voxelscript_parser.js  create_voxelscript_parser.ts  package.json  voxelscript.pegjs  voxelscript_ast.txt  voxelscript_compiler_context.ts
cpp_voxel_engine/: .gitignore  CMakeLists.txt
cpp_voxel_engine/assets/: simple.frag  simple.vert
cpp_voxel_engine/src/: camera.hpp  main.cpp  player.hpp  utils.cpp  utils.h  utils.hpp  world.cpp  world.hpp
voxel_engine/: .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  api.txt  docs  doxygen  pixel_helper  pixel_helper.bat  run.sh  setup  setup.bat  setup.sh  vc  vc.bat  vcd  vcd.bat  vs  vs.bat
voxel_engine/assets/: simple.frag  ui.frag
voxel_engine/assets/shaders/: block.frag  block.vert  chunk.frag  chunk.vert  entity.frag  font.frag  font.vert  mesh.frag  mesh.vert  mesh_shaded.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  ui.frag
voxel_engine/documentation/: Doxyfile  conf.py  genindex.rst  gl.rst  index.rst
voxel_engine/mods/: api.ts  camera.ts  env.ts  game.ts  host-functions.ts  main.ts  model.ts  player.ts  world_gen.ts
voxel_engine/mods/main_mod/: AABB.vs  Camera.vs  Env.vs  Input.vs  Main.vs  Models.vs  Player.vs  VoxelEngine.vs  World.vs  WorldGen.vs  vspackage.json
voxel_engine/mods/main_mod/Math/: Math.vs  mat4.vs  vec2.vs  vec3.vs
voxel_engine/mods/main_mod/StandardLibrary/: Hashable.vs  Hashmap.vs  Operators.vs  Optional.vs
voxel_engine/mods/main_mod/VoxelEngine/: Env.vs  Input.vs  VoxelEngine.vs
voxel_engine/pixel_helper_src/: main.cpp
voxel_engine/src/: UI.cpp  UI.hpp  aabb.cpp  aabb.hpp  api.cpp  api.hpp  block.cpp  block.hpp  block_mesh.rs  bmp.cpp  bmp.hpp  camera.cpp  camera.hpp  chunk.cpp  chunk.hpp  entity.cpp  entity.hpp  event.cpp  event.hpp  fn_pointer.hpp  font.cpp  font.hpp  gl_utils.cpp  gl_utils.hpp  html_renderer.cpp  html_renderer.hpp  includes.hpp  input.cpp  input.hpp  main.cpp  main.rs  megachunk.cpp  megachunk.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  modloader.cpp  modloader.hpp  player.cpp  (+19 more)
voxel_engine/src/example/: drop.cpp  drop.hpp  main_game.cpp  main_game.hpp  main_ui.cpp  main_ui.hpp  page_ui.cpp  page_ui.hpp  player.cpp  player.hpp  world_gen.cpp  world_gen.hpp
voxel_engine/src/example_ui/: main_ui.cpp  main_ui.hpp
voxelscript/: .gitignore  create_voxelscript_parser.ts  package.json  setup  voxelscript.pegjs  voxelscript_ast.txt  voxelscript_compiler_context.ts
voxelscript/language-server/: package.json  tsconfig.json
voxelscript/language-server/src/: server.ts
voxelscript/scripts/: install_compiler.sh  iro_to_textmate.py  setup_iro.sh  update_iro.sh
voxelscript/src/: base_ts.ts  build_tsconfig.json  function.hpp  imports.d.ts  main.hpp  tsconfig.json  utils.ts  voxelscript.pegjs  voxelscript_compiler.ts  voxelscript_compiler_context.ts  voxelscript_to_typescript_renderer.ts
voxelscript/tests/main_mod/: Camera.vs  Main.vs  VoxelEngine.vs
voxelscript/tests/main_mod/Math/: Math.vs  mat4.vs
voxelscript/tests/voxelscript_test/: Entity.vs  EntityContainer.vs  Env.vs  Main.vs  VoxelEngine.vs  test.vs  vspackage.json
voxelscript/tests/voxelscript_test/Blocks/: Ores.vs
voxelscript/tests/voxelscript_test/Items/: Fuels.vs
voxelscript/tests/voxelscript_test/Machines/Crusher/: Crusher.vs  CrusherRenderer.vs  CrusherUI.vs
voxelscript/voxelscript_extension/: .vscodeignore  package.json  tsconfig.json
voxelscript/voxelscript_extension/client/: package.json  tsconfig.json
voxelscript/voxelscript_extension/client/src/: extension.ts
voxelscript/voxelscript_extension/server/: package.json
voxelscript/voxelscript_extension/server/src/: server.ts
voxelscript/voxelscript_extension/voxelscript_highlighter/: test.vs  voxelscript.iro
voxelscript/voxelscript_extension/voxelscript_highlighter/syntaxes/: .gitignore
voxelscript/voxelscript_highlighter/: package.json  voxelscript.iro
